[gd_scene load_steps=6 format=2]

[ext_resource path="res://Choose.gd" type="Script" id=1]
[ext_resource path="res://assets/background/planet_3.png" type="Texture" id=2]
[ext_resource path="res://assets/background/choose_text_box.png" type="Texture" id=3]
[ext_resource path="res://assets/fonts/oswald/Oswald-Regular.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 45
font_data = ExtResource( 5 )

[node name="Choose" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -8.0
margin_bottom = 8.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_3" type="TextureButton" parent="."]
margin_left = 1334.32
margin_top = 424.031
margin_right = 1769.32
margin_bottom = 859.031
rect_scale = Vector2( 1.3, 1.3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_2" type="TextureButton" parent="."]
margin_left = 702.2
margin_top = 423.892
margin_right = 1137.2
margin_bottom = 858.892
rect_scale = Vector2( 1.3, 1.3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_1" type="TextureButton" parent="."]
margin_left = 31.6396
margin_top = 428.406
margin_right = 466.64
margin_bottom = 863.406
rect_scale = Vector2( 1.3, 1.3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="textbox" type="Sprite" parent="."]
self_modulate = Color( 1, 1, 1, 0.576471 )
position = Vector2( 957.133, 90.1255 )
texture = ExtResource( 3 )

[node name="BG" type="ParallaxBackground" parent="."]

[node name="planetBG" type="Sprite" parent="BG"]
position = Vector2( 961.639, 539.852 )
scale = Vector2( 1.00469, 1.00834 )
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
margin_left = 37.7926
margin_top = 36.7707
margin_right = 1868.79
margin_bottom = 141.771
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.545098, 1, 0.713726, 1 )
text = "Your robotic explorer has reported back! It has found 3 seeds of interest, but it only has room to store one."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Button_3" to="." method="_on_Button_3_pressed"]
[connection signal="pressed" from="Button_2" to="." method="_on_Button_2_pressed"]
[connection signal="pressed" from="Button_1" to="." method="_on_Button_1_pressed"]
